# ice4

./: .gitignore  0-20.json  Cargo.toml  Makefile  README.md  build.rs  build.sh  commit-msg  compress.sh  convert_pst.py  launcher.sh  log  make_ice4_logo.py  multitrain.sh  spsa-params  swiss.py  tune_state.json
minifier/: ast.rs  constant_fold.rs  cpp.lalrpop  decl_merger.rs  expr_merger.rs  extern_idents  extern_types  keywords  lexical.rs  local_renamer.rs  main.rs  member_renamer.rs  numberpack.rs  parse.rs  preprocess.rs  renamer.rs  semantic_analysis.rs  token_tree.rs  tokenize.rs
minifier/parse/: ast.rs  cpp.lalrpop  extern_types  keywords  lexical.rs  tokenize.rs
src/: board.cpp  board.hpp  consts.cpp  consts.hpp  data_filter.cpp  eval.cpp  eval.hpp  everything.cpp  everything.hpp  main.cpp  network.txt  params.cpp  pst.cpp  qs_filter.cpp  search.cpp  search.hpp  std.hpp  tables.cpp  tables.hpp  trainer.cpp  tt.cpp  uci.cpp  uci.hpp
trainer/: Cargo.toml  convert.py  requirements.txt  train.py
trainer/src/: features.rs  lib.rs
