[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }
cozy-chess = "0.3"
itertools = "0.12.0"
marlinformat = { git = "https://github.com/MinusKelvin/marlinflow", rev = "559f74c" }
